<resources>
    <string name="app_name">App_control</string>
    //ResgistroControl
    <string name="txt_c_nombre">Nombre</string>
    <string name="txt_c_apellido">Apellido</string>
    <string name="txt_c_fecha">Fecha de nacimiento</string>
    <string name="txt_c_numero">Numero de celular</string>
    <string name="txt_c_correo">Correo</string>
    <string name="txt_c_contrasena">Contraseña</string>
    <string name="txt_c_confirmar">Confirmar contraseña</string>
    <string name="txt_c_ruta">Ruta</string>
    <string name="txt_c_licencia">Licencia</string>
    <string name="btn_c_aceptar">Aceptar</string>
    <string name="sp_c_tipo">Tipo de transporte</string>
    <string name="rb_c_terminos">Acepto Terminos y Condiciones</string>
    //RecuperarContra
    <string name="txt_c_correoContra">E-mail</string>
    <string name="tv_c_olvidaste">¿Olvidaste Contraseña?</string>
    <string name="tv_c_introducir">Introducir un correo electronico con el que te registraste. En un
        momento recibiras un correo para configurar de nuevo la contraseña de tu cuenta.</string>
    <string name="btn_c_enviar">Enviar</string>
    //Principal
    <string name="txt_c_ubicacion">Ubicacion</string>
    <string name="tv_c_ficha">Luis Manuel Perez</string>
    <string name="tv_c_inicio">Inicio</string>
    <string name="tv_c_final">Final</string>
    <string name="tv_c_tiempo">Tiempo</string>
    <string name="tv_c_conductor">Conductor</string>
    <string name="tv_c_disponibilidad">Disponibilidad</string>
    <string name="tv_c_iniciotxt">Inicio</string>
    <string name="tv_c_finaltxt">Final</string>
    <string name="tv_c_tiempotxt">Tiempo</string>
    <string name="tv_c_conductortxt">Conductor</string>
    <string name="tv_c_disponibilidadtxt">Disponibilidad</string>
    <string name="tv_c_rutas">Rutas</string>
    <string name="txt_c_destino">Destino</string>
    //Maps
    <string name="marker_detail_lating">(%1$.2f,%2$.2f)</string>
    //Correo
    <string name="subject">Asunto</string>
    <string name="to">Para</string>
    <string name="message">Mensaje</string>
    <string name="send">Enviar</string>
    <string name="sending_mail">Enviando Correo</string>
    <string name="mail_sent">Correo Enviado</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="compose">Escribir Correo</string>
    <string name="field_is_required">Campo es requerido</string>
    <string name="warning_message">Se debe utilizar una cuenta de Google y esta debe tener Activado el acceso desde Apps menos seguras</string>
    <string name="sender_data_title">Datos del remitente</string>
    //Confirmar
    <string name="tv_c_bienvenido">Bienvenido a Kacharpo</string>
    <string name="tv_c_codigo">Ingresa el codigo de activacion que mandamos a su email. Si rebasas el numero de intentos maximo, te llegara un nuevo codigo de confirmacion automaticamente</string>
    <string name="tv_c_intentos">Numero de intentos restantes: 5</string>
    <string name="tv_c_recibir">Da click en el boton reenviar si aun no recibes el correo con el codigo de activacion</string>
    <string name="btn_c_reenviar">Reenviar</string>
    <string name="txt_c_codigo">Codigo de confirmacion</string>
    //TabLayout
    <string name="ti_inicio">Inicio</string>
    <string name="ti_final">Final</string>
    <string name="ti_tiempo">Tiempo</string>
    <string name="ti_conductor">Conductor</string>
    <string name="ti_disponibilidad">Disponibilidad</string>
    <!-- TODO: Remove or change this placeholder text -->
    //Fragment
    <string name="tv_alertas">Alertas</string>
    <string name="tv_calle1">Calle 1</string>
    <string name="tv_calle2">Calle 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //Barra
    <string name="title_activity_principal_menu">PrincipalMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    //Menu
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    //Facebook
    <string name="facebook_app_id">1577550875924576</string>
    <string name="fb_login_protocol_scheme">fb269823724953921</string>

</resources>