<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroControl">

    <EditText
        android:id="@+id/txt_c_nombre"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/txt_c_nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_c_control" />

    <EditText
        android:id="@+id/txt_c_apellido"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/txt_c_apellido"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_c_nombre" />

    <EditText
        android:id="@+id/txt_c_numero"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/txt_c_numero"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_c_fecha" />

    <EditText
        android:id="@+id/txt_c_correo"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="Correo"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_c_numero" />

    <EditText
        android:id="@+id/txt_c_fecha"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/txt_c_fecha"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_c_apellido" />

    <EditText
        android:id="@+id/txt_c_contrasena"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/txt_c_contrasena"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_c_correo" />

    <EditText
        android:id="@+id/txt_c_confirmar"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/txt_c_confirmar"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_c_contrasena" />

    <EditText
        android:id="@+id/txt_c_ruta"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/txt_c_ruta"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_c_confirmar" />

    <EditText
        android:id="@+id/txt_c_licencia"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/txt_c_licencia"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_c_ruta" />

    <Spinner
        android:id="@+id/sp_c_tipo"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_c_licencia" />

    <Button
        android:id="@+id/btn_c_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F44336"
        android:onClick="Aceptar"
        android:text="@string/btn_c_aceptar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_c_tipo"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/img_c_control"
        android:layout_width="93dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>