<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperarContra">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_c_recuperar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_c_olvidaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:text="@string/tv_c_olvidaste"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_c_introducir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="68dp"
            android:text="@string/tv_c_introducir"
            android:textColor="#000000"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_c_correoContra_l"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#FF0101"
            android:ems="10"
            android:hint="@string/txt_c_correo"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_c_correoContra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FF0101"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_c_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#F44336"
            android:text="@string/btn_c_enviar" />
    </LinearLayout>

</RelativeLayout>