<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.PrincipalFragment">

    <RelativeLayout
        android:background="#F44336"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Principal">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </fragment>
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_c_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:animateLayoutChanges="true"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/ly_c_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/atxt_ca_calle1_l"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="#FF0101"
                        android:ems="10"
                        android:gravity="bottom|center"
                        android:hint="@string/txt_c_ubicacion">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/atxt_ca_calle1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFF"
                            android:completionThreshold="1"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textSize="14sp"
                            tools:ignore="TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/atxt_c_destino_l"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/atxt_ca_calle1_l"
                        android:layout_marginTop="2dp"
                        android:backgroundTint="#FF0101"
                        android:ems="10"
                        android:hint="@string/txt_c_destino">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/atxt_c_destino"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/atxt_ca_calle1_l"
                            android:background="#FFFFFF"
                            android:completionThreshold="1"
                            android:gravity="start"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textSize="14sp"
                            tools:ignore="TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <Spinner
            android:id="@+id/sp_c_rutas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_c_txt"
            android:visibility="invisible"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_c_tl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sp_c_rutas"
            android:animateLayoutChanges="true"
            android:visibility="invisible"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/ly_c_tl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tl_v_opcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/ti_c_inicio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ti_inicio" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/ti_c_final"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ti_final" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/ti_c_tiempo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ti_tiempo" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/ti_c_disponibilidad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ti_disponibilidad" />
                    </com.google.android.material.tabs.TabLayout>


                </RelativeLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_c_mostrar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/cv_c_tl"
            android:visibility="invisible"
            tools:ignore="SpeakableTextPresentCheck">

        </androidx.viewpager.widget.ViewPager>

        <TextView
            android:id="@+id/tv_c_ficha"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="#FFFFFF"
            android:text="@string/tv_c_ficha"
            android:visibility="invisible" />

        <FrameLayout
            android:id="@+id/fm_c_boton"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp">

        </FrameLayout>
    </RelativeLayout>

</FrameLayout>